--- a/src/main/resources/templates/admin/data/setting/settingInfo.html
+++ b/src/main/resources/templates/admin/data/setting/settingInfo.html
@@ -25,13 +25,13 @@
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">并发请求数</label>
             <div class="layui-input-block">
-                <input type="number" min="1" max="32" class="layui-input" name="concurrentRequests" th:value="*{concurrentRequests}" placeholder="并发请求数">
+                <input type="number" min="0" max="32" class="layui-input" name="concurrentRequests" th:value="*{concurrentRequests}" placeholder="并发请求数">
             </div>
         </div>
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">域名并发数</label>
             <div class="layui-input-block">
-                <input type="number" min="1" max="16" class="layui-input" name="concurrentRequestsPerDomain" th:value="*{concurrentRequestsPerDomain}" placeholder="域名并发数">
+                <input type="number" min="0" max="16" class="layui-input" name="concurrentRequestsPerDomain" th:value="*{concurrentRequestsPerDomain}" placeholder="域名并发数">
             </div>
         </div>
     </div>
@@ -48,13 +48,13 @@
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">最小下载延迟</label>
             <div class="layui-input-block">
-                <input type="number" min="1" class="layui-input" name="downloadDelay" th:value="*{downloadDelay}" placeholder="最小下载延迟（单位：秒）">
+                <input type="number" min="0" class="layui-input" name="downloadDelay" th:value="*{downloadDelay}" placeholder="最小下载延迟（单位：秒）">
             </div>
         </div>
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">最大下载延迟</label>
             <div class="layui-input-block">
-                <input type="number" min="1" class="layui-input" name="autothrottleMaxDelay" th:value="*{autothrottleMaxDelay}" placeholder="最大下载延迟（单位：秒）">
+                <input type="number" min="0" class="layui-input" name="autothrottleMaxDelay" th:value="*{autothrottleMaxDelay}" placeholder="最大下载延迟（单位：秒）">
             </div>
         </div>
     </div>
@@ -64,13 +64,13 @@
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">初始下载延迟</label>
             <div class="layui-input-block">
-                <input type="number" min="1" class="layui-input" name="autothrottleStartDelay" th:value="*{autothrottleStartDelay}"  placeholder="初始下载延迟（单位：秒）">
+                <input type="number" min="0" class="layui-input" name="autothrottleStartDelay" th:value="*{autothrottleStartDelay}"  placeholder="初始下载延迟（单位：秒）">
             </div>
         </div>
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">并行请求平均数</label>
             <div class="layui-input-block">
-                <input type="number" min="1" class="layui-input" name="autothrottleTargetConcurrency" th:value="*{autothrottleTargetConcurrency}" placeholder="并行请求平均数">
+                <input type="number" min="0" class="layui-input" name="autothrottleTargetConcurrency" th:value="*{autothrottleTargetConcurrency}" placeholder="并行请求平均数">
             </div>
         </div>
     </div>
@@ -87,6 +87,14 @@
         <div class="layui-input-block">
             <input type="radio" name="depthPriority" value="0" th:field="*{depthPriority}" title="深度优先">
             <input type="radio" name="depthPriority" value="1" th:field="*{depthPriority}" title="广度优先">
+        </div>
+    </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">缓存</label>
+        <div class="layui-input-block">
+            <input type="radio" name="httpcacheEnabled" value="0" th:field="*{httpcacheEnabled}" title="开启">
+            <input type="radio" name="httpcacheEnabled" value="1" th:field="*{httpcacheEnabled}" title="禁用">
         </div>
     </div>
 
