--- a/src/main/resources/templates/front/list.html
+++ b/src/main/resources/templates/front/list.html
@@ -25,8 +25,19 @@
                         <input class="searchBox" type="text" name="" value=""><span class="searchButton"></span>
                     </li>
 
+                    <!--<ul class="chooseType">-->
+                        <!--<a class="allResults" href="javascript:void(0)"><span class="leftIcon"></span><span>地图找房</span></a>-->
+                    <!--</ul>-->
                     <ul class="chooseType">
-                        <a class="allResults" href="javascript:void(0)"><span class="leftIcon"></span><span>地图找房</span></a>
+                        <a class="allResults" href="javascript:void(0)">
+                            <span class="leftIcon"></span>
+                            <span>地图找房</span>
+                        </a>
+                        <a class="willSign" href="/contactHouse">
+                            <span class="rightIcon"></span>
+                            <span>我的收藏</span>
+                            <span class="signNum" style="display: inline-block;" th:if="${collectCount != null}">[[${collectCount}]]</span>
+                        </a>
                     </ul>
                 </div>
                 <div>热门搜索: <span><a target="_blank" href="wwww.baidu.com">小区</a></span> <span>小区</span> <span>小区</span></div>
@@ -241,25 +252,25 @@
 
 
             <img class="backTop" th:src="@{/lib/images/front/back-to-top.png}"/>
-            <script src="http://api.map.baidu.com/api?v=2.0&ak=FsL0TGj6V2tmG6juhiU6ugdz"></script>
-            <script th:src="@{/lib/js/plugin/jquery.lazyload.min.js}"></script>
+            <script src="http://api.map.baidu.com/api?v=2.0&ak=WOelgx1d1R4mLIWsj6Q2lOYQB4FLC0WE"></script>
             <script type="text/javascript" th:src="@{/lib/js/front/house-list-flat.js}"></script>
         </div>
     </div>
 
     <div th:replace="~{front/common/common :: footer}"></div>
+    <link rel="stylesheet" type="text/css" th:href="@{'/lib/layui/css/layui.css?v='+3}" media="all"/>
     <link rel="stylesheet" type="text/css" th:href="@{/lib/css/plugin/jquery-ui.min.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/lib/css/plugin/jquery-ui.theme.css}">
+    <link type="text/css" th:href="@{/lib/css/plugin/jquery-ui.theme.css}">
     <!--<script src="https://code.jquery.com/jquery-1.12.4.js"></script>-->
     <script type="text/javascript" th:src="@{/lib/js/front/area.js}"></script>
     <script type="text/javascript" th:src="@{/lib/js/plugin/jquery-ui.js}"></script>
+    <script th:src="@{/lib/js/plugin/jquery.lazyload.min.js}"></script>
     <script type="text/javascript" th:inline="javascript">
 
         var city = [[${searchBody.city}]];
         var count = [[${houses.count}]];
         var curr = [[${searchBody.curr}]];
         var limit = [[${searchBody.limit}]];
-
 
         var data = {
             priceBlock : [[${searchBody.priceBlock}]],
@@ -270,7 +281,11 @@
         layui.use('laypage', function() {
             var laypage = layui.laypage;
 
+            loadBiaoyu();
+
             loadRegion();
+
+            $("img.lazy").lazyload({effect: "fadeIn", threshold : 200});  //lazyload初始化函数
 
             var currentKeyword = [[${searchBody.keyword}]];
             if (null !== currentKeyword && currentKeyword.length > 0) {
@@ -328,8 +343,20 @@
                 }
             });
 
-            $(".lazy").lazyload({effect: "fadeIn", threshold : 200});  //lazyload初始化函数
         });
+
+        function loadBiaoyu() {
+            // 设置当前城市
+            $("div.city").append('<a target="_blank" href="/?city='+city+'">'+ city +'租房</a>');
+
+            // 设置标语
+            $("li.biaoyu").append('<span>&nbsp></span>&nbsp<a href="/rent/search?city='+city+'">' + city + '找房</a>');
+
+            if (data.region != null && data.region != "*") {
+                // 区域标语
+                $("li.biaoyu").append('<span>&nbsp></span>&nbsp<a href="javascript:void(0)">'+ data.region +'租房</a>');
+            }
+        }
 
         monthCost.delegate('a','click',function () {
             data.priceBlock = $(this).data("bind");
@@ -339,6 +366,10 @@
         houseMeasure.delegate('a','click',function () {
             data.squareBlock = $(this).data("bind");
             searchButton.click();
+        });
+
+        cities.delegate('a', 'click', function () {
+           alert(111111);
         });
 
         regions.delegate('a','click',function () {
@@ -381,6 +412,7 @@
         }
         
         function loadRegion() {
+            var parentId;
             var regionList = [];
             $.get('/lib/json/city_region.json', function (area) {
                 $.each(area, function (index, item) {
